<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context="com.example.android.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/question_1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_1_choice_1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_1_choice_2" />

            <RadioButton
                android:id="@+id/question_1_good_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_1_choice_3" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_1_choice_4" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/question_2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/good_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/view_horizontal_padding"
            android:paddingLeft="@dimen/view_horizontal_padding"
            android:paddingStart="@dimen/view_horizontal_padding"
            android:text="@string/question_2_choice_1" />

        <CheckBox
            android:id="@+id/bad_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/view_horizontal_padding"
            android:paddingLeft="@dimen/view_horizontal_padding"
            android:paddingStart="@dimen/view_horizontal_padding"
            android:text="@string/question_2_choice_2" />

        <CheckBox
            android:id="@+id/bad_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/view_horizontal_padding"
            android:paddingLeft="@dimen/view_horizontal_padding"
            android:paddingStart="@dimen/view_horizontal_padding"
            android:text="@string/question_2_choice_3" />

        <CheckBox
            android:id="@+id/good_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/view_horizontal_padding"
            android:paddingLeft="@dimen/view_horizontal_padding"
            android:paddingStart="@dimen/view_horizontal_padding"
            android:text="@string/question_2_choice_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/question_3"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/question_4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_4_good_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_4_choice_1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_4_choice_2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_4_choice_3" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_4_choice_4" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/question_5"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_5_choice_1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_5_choice_2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_5_choice_3" />

            <RadioButton
                android:id="@+id/question_5_good_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_5_choice_4" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/question_6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/question_7"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_7_choice_1" />

            <RadioButton
                android:id="@+id/question_7_good_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_7_choice_2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_7_choice_3" />

            <RadioButton

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/view_horizontal_padding"
                android:paddingLeft="@dimen/view_horizontal_padding"
                android:paddingStart="@dimen/view_horizontal_padding"
                android:text="@string/question_7_choice_4" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_horizontal_padding"
            android:onClick="getScore"
            android:text="@string/submitButton" />
    </LinearLayout>
</ScrollView>